+52 en el numero

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="backgroundContactoImg">
         <div class="whatsAppData">
           <img src="CSS/Image/ImageWhatsApp.png" alt="whatsApp image" />
-          <p id="WhatsAppCopy">477 675 6814</p>
+          <p id="WhatsAppCopy">+52 477 675 6814</p>
           <button id="btnCopyWhatsApp">Copiar número</button>
         </div>
         <div class="gmailData">
