--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             </div>
           </div>
         </div>
+        <div class="separator"></div>
+      </div>
+      <div class="moreInformation">
+        <button id="btnMoreInformation">Mas sobre mi</button>
       </div>
     </div>
     <div class="backgroundExperiencia">
@@ -200,4 +204,3 @@
     <script src="JS/inicio.js"></script>
   </body>
 </html>
-
