Mejores posiciones en el cierre de imagenes

--- a/sobreMi/sobreMi.html
+++ b/sobreMi/sobreMi.html
@@ -229,7 +229,7 @@
                 <img src="Image/ImageAndroid.png" alt="Android Image" />
                 <p>Desarrollo Móvil en Android Studio</p>
                 <button class="btnShowConstancy">Constancia Android</button>
-                <div class="constancyOverlay overlay">
+                <div class="constancyOverlay">
                     <div class="modal">
                         <img src="Image/ImageCursoAndroid.png" alt="Constancia Android" />
                     </div>
