--- a/sobreMi/sobreMi.html
+++ b/sobreMi/sobreMi.html
@@ -243,7 +243,7 @@
                 <img src="Image/ImageAngular.png" alt="Angular Image" />
                 <p>Desarrollo Web con Angular</p>
                 <button class="btnShowConstancy">Constancia Angular</button>
-                <div class="constancyOverlay overlay">
+                <div class="constancyOverlay">
                     <div class="modal">
                         <img src="Image/ImageCursoAngularProx.png" alt="Constancia Angular" />
                         <p>La constancia esta en preparacion</p>
