Textos de skills arreglados

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
       <div class="backgroundFrontBackDev">
         <div class="backgroundFrontDev">
           <img
-            src="CSS/Image/ImageFrontDev.png"
-            alt="Frontend development image"
-          />
+            src="CSS/Image/ImageFrontDev.png" alt="Frontend development image"/>
           <div class="textFrontDev">
             <p>Front-end</p>
           </div>
@@ -65,15 +63,22 @@
           <div class="backgroundImageSkillsFront">
             <div class="imageFormatSkillFront">
               <img src="CSS/Image/ImageHTML5.png" alt="HTML Image" />
-              <p>HTML</p>
+              <div class="txtFormatSkillFront">
+                <p>HTML</p>
+              </div>
+              
             </div>
             <div class="imageFormatSkillFront">
               <img src="CSS/Image/ImageJS.png" alt="JS Image" />
-              <p>JavaScript</p>
+              <div class="txtFormatSkillFront">
+                <p>JavaScript</p>
+              </div>
             </div>
             <div class="imageFormatSkillFront">
               <img src="CSS/Image/ImageCSS.png" alt="CSS Image" />
-              <p>CSS</p>
+              <div class="txtFormatSkillFront">
+                <p>CSS</p>
+              </div>
             </div>
           </div>
         </div>
@@ -89,19 +94,27 @@
           <div class="backgroundImageSkillsBack">
             <div class="imageFormatSkillBack">
               <img src="CSS/Image/ImageKotlin.png" alt="Kotlin Image" />
-              <p>Kotlin</p>
+              <div class="txtFormatSkillFront">
+                <p>Kotlin</p>
+              </div>
             </div>
             <div class="imageFormatSkillBack">
               <img src="CSS/Image/ImagePython.png" alt="Python Image" />
-              <p>Python</p>
+              <div class="txtFormatSkillFront">
+                <p>Python</p>
+              </div>
             </div>
             <div class="imageFormatSkillBack">
               <img src="CSS/Image/ImageSQL.png" alt="SQL Image" />
-              <p>SQL</p>
+              <div class="txtFormatSkillFront">
+                <p>SQL</p>
+              </div>
             </div>
             <div class="imageFormatSkillBack">
               <img src="CSS/Image/ImageCobol.png" alt="Cobol Image" />
-              <p>COBOL</p>
+              <div class="txtFormatSkillFront">
+                <p>COBOL</p>
+              </div>
             </div>
           </div>
         </div>
@@ -177,6 +190,13 @@
           </div>
         </div>
       </div>
+      <div class="backgroundBtnProyects">
+<!--        <div class="separator"></div>
+        <div class="moreProyects">
+          <button id="btnMoreProyects">Mas proyectos</button>
+        </div>-->
+      </div>
+      
     </div>
     <div class="backgroundContacto">
       <div class="aboutMe">
