Detalles de textos y sombreas arregladas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="textPresentation">
       <div class="labelFullName">
-        <h1>Raul Ponce Lopez</h1>
+        <h1>Raúl Ponce López</h1>
       </div>
 
       <div class="textPresentationTecnology">
@@ -110,12 +110,6 @@
                 <p>SQL</p>
               </div>
             </div>
-            <div class="imageFormatSkillBack">
-              <img src="CSS/Image/ImageCobol.png" alt="Cobol Image" />
-              <div class="txtFormatSkillFront">
-                <p>COBOL</p>
-              </div>
-            </div>
           </div>
         </div>
         <div class="separator"></div>
@@ -137,7 +131,7 @@
 
         <div class="conteinProyecto">
           <p>
-            Realice la revision y modificacion de una parte del codigo en un
+            Realice la revisión y modificacion de una parte del codigo en un
             sistema encargado de calcular las comisiones e IVA de las
             transacciones Internacionales en la empresa financiera. (Por razones
             de contrato no se me permite dar mas datos :)
@@ -151,7 +145,7 @@
       </div>
       <div class="backgroundProyecto">
         <div class="titleProyecto">
-          <h3>Sistemas de camara de vision</h3>
+          <h3>Sistemas de cámara de vision</h3>
         </div>
         <div class="conteinProyecto">
           <p>
